# g4vg

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-full.yml  pr.yml  push.yml
cmake/: G4VGConfig.cmake.in
scripts/cmake-presets/: ci-ubuntu-cuda.json
src/: CMakeLists.txt  G4VG.cc  G4VG.hh
src/detail/: Converter.cc  Converter.hh  LogicalVolumeConverter.cc  LogicalVolumeConverter.hh  Scaler.hh  SolidConverter.cc  SolidConverter.hh  Transformer.hh  TranslationTypes.hh
test/: CMakeLists.txt  G4VG.link.test.cc  G4VG.test.cc  g4vg_test_config.h.in
